<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:visible="false"
        android:icon="@drawable/ic_coins_on_hand"
        android:id="@+id/action_remove_ads"
        android:orderInCategory="100"
        android:title="@string/menu_remove_ads"
        app:showAsAction="never" />


    <item
        android:icon="@drawable/ic_share"
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_help"
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/title_activity_help"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_star"
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:title="@string/menu_rate"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@drawable/ic_send"
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/menu_contactor"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_send"
        android:id="@+id/privacy_policy"
        android:orderInCategory="100"
        android:title="@string/menu_privacy"
        app:showAsAction="ifRoom" />
</menu>
