<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:id="@+id/row_container"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/cuprum"
        android:text="@string/dialogo_nuevas_medidas"
        android:textSize="13sp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/perfil"
            android:layout_marginRight="8dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_perfil"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/ancho"
            android:layout_marginRight="8dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_ancho"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/diametro"
            android:layout_marginRight="8dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_rin"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>