<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculadora">

    <com.google.android.gms.ads.AdView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-9964109306515647/2489559411"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView">

        <androidx.core.widget.NestedScrollView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/titulo1"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/cairo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/subtitle"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:fontFamily="@font/cuprum" />


                <include layout="@layout/card_original" />
                <include layout="@layout/card_nuevo" />


                <include layout="@layout/card_resultados" />

                <TextView
                    android:textStyle="bold"
                    android:fontFamily="@font/changa"
                    android:text="@string/recuerda"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:fontFamily="@font/cuprum"
                    android:text="@string/recuerda1"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="16dp"
                    android:paddingBottom="32dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.bottomappbar.BottomAppBar
            app:hideOnScroll="true"
            app:layout_scrollFlags="scroll|enterAlways"
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
            app:backgroundTint="?attr/colorPrimary"
            app:elevation="4dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            app:backgroundTint="?attr/colorAccent"
            app:layout_anchor="@id/bottom_bar"
            android:src="@drawable/ic_add"
            app:elevation="2dp"
            app:fabSize="mini"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>