<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.edxavier.wheels_equivalent.Help"
    tools:showIn="@layout/activity_help">

    <ScrollView
        android:layout_width="match_parent"
        android:descendantFocusability="blocksDescendants"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:descendantFocusability="blocksDescendants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true">

    <LinearLayout
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:fontFamily="@font/changa"
            android:layout_width="match_parent"
            android:text="@string/help1"
            android:gravity="center"
            android:textSize="15sp"
            android:paddingTop="8dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/captura"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/captura2"
            android:layout_height="wrap_content" />

        <include layout="@layout/admob_banner" />

        <TextView
            app:fontFamily="@font/changa"
            android:layout_width="match_parent"
            android:text="@string/help2"
            android:gravity="center"
            android:paddingTop="16dp"
            android:textSize="15sp"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/captura3"
            android:layout_height="wrap_content" />

        <TextView
            app:fontFamily="@font/changa"
            android:layout_width="match_parent"
            android:text="@string/help3"
            android:gravity="center"
            android:paddingTop="16dp"
            android:textSize="15sp"
            android:layout_height="wrap_content" />
        <com.google.android.gms.ads.AdView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView2"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-9964109306515647/2489559411"
            android:layout_gravity="center_horizontal|bottom">
        </com.google.android.gms.ads.AdView>

        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/captura4"
            android:layout_height="wrap_content" />


    </LinearLayout>

</androidx.cardview.widget.CardView>

    </ScrollView>


</RelativeLayout>
